--- a/static/assets/css/global.css
+++ b/static/assets/css/global.css
@@ -3,23 +3,23 @@
 
 :root {
    /* Background Variables */
-   --background-image: url("/./assets/media/background/full-main.png"); /* Background Image */
-   --backdrop-filter: blur(10px) brightness(80%); /* Nav Backdrop filter */
-   --background-nav: rgba(255, 255, 255, 0.02); /* Nav Background */
-   --background-color: #222; /* Main Background Color */
-   --background-input: #4545459e; /* Input Field Background Color */
-   --background-column: #353535; /* Background for Apps Container */
-   --background-settings: #2a2a2a; /* Settings Card Background */
-   --background-buttons: #333; /* Button Background Color */
-   --tab-active-background: #444; /* Accent Color for Tabs */
-   --tab-inactive-background: ; /* Background Color for Tabs Not In Use */
+   --background-image: url("/./assets/media/background/forest.png"); /* Background Image */
+   --backdrop-filter: blur(3px) brightness(80%); /* Nav Backdrop filter */
+   --background-nav: rgba(66, 132, 87, 0.427); /* Nav Background */
+   --background-color: #3f5c46; /* Main Background Color */
+   --background-input: #9cd3989e; /* Input Field Background Color */
+   --background-column: #3f5c46; /* Background for Apps Container */
+   --background-settings: #3f5c46; /* Settings Card Background */
+   --background-buttons: #2b3e2f; /* Button Background Color */
+   --tab-active-background: #567c5f; /* Accent Color for Tabs */
+   --tab-inactive-background: #3f5c46; /* Background Color for Tabs Not In Use */
    --slider-active-background: #4caf50; /* Active Slider Background Color */
    --slider-inactive-background: #ccc; /*  Slider Background Color */
    --nav-image: url("/./assets/media/favicon/main.png"); /* Nav Logo */
    /* Text Variables */
    --text-primary: #fff; /* Primary Text Color */
    --text-dark: #555; /* Dark Text Color for Error Page, Scrollbar, and Particles */
-   --text-placeholder: #aaa; /* Placeholder Text Color */
+   --text-placeholder: #ffffff; /* Placeholder Text Color */
    /* Other Variables */
    --save-button: #4caf50; /* Save Button, Typically Green */
    --reset-button: #f44336; /* Reset Button, Typically Red */
