--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -45,7 +45,7 @@
 
 .main-search {
    width: 50vw;
-   height: 5vh;
+   height: .5vh;
    font-family: "Poppins", sans-serif;
    font-size: 16px;
    box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.2);
