--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -17,6 +17,19 @@
    text-shadow: 2px 4px 6px rgb(0, 0, 0, 0.2);
 }
 
+.firsttitle {
+   font-size: 10vh;
+   color: rgba(47, 255, 0, 0.566);
+   font-family: "Inter", sans-serif;
+   text-align: center;
+   text-transform: uppercase;
+   border-radius: 0px 0px 5px 5px;
+   margin-top: 30vh;
+   margin-bottom: 5vh;
+   transition: 0.35s ease;
+   text-shadow: 2px 4px 6px rgb(0, 0, 0, 0.2);
+}
+
 .title:hover {
    transform: translateY(-5%) scale(1.03);
    font-weight: 800;
